# reascript-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  flake.nix  shell.nix
.github/workflows/: generate_reaper_plugin_functions.yml  sync_submodules.yml
generate-reaper-plugin-functions/: generate_reaper_plugin_functions.lua  run.sh
lib/: default.nix  update.nix  update.sh
meta/proc/: Cargo.toml
meta/proc/src/: lib.rs
meta/proc/tests/: wrap_bindgen.rs
scripts/: generate_reaper_plugin_functions.nix  reaper_flake_input_update.nix  update.nix  update_reaper_flake_input.nix
src/: lib.rs
